debugged subpixel correction for clipped edges. Actually, the code is simpler if I dont think in int.frac

--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: repeat(3, 100px) repeat(3, 100px)
+  grid-template-columns: repeat(3, 100px) repeat(4, 100px)
     /* gap 20 px  repeat(3,100px) */
     /* grid-template-columns: repeat(2,repeat(3,100px) gap 20 px ) */
 
